# robotframework-trace-report

./: .dockerignore  .editorconfig  .gitignore  .pabotsuitenames  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.jstest  Dockerfile.mcp  Dockerfile.test  GANTT_CHART_OVERLAP_ANALYSIS.md  LICENSE  Makefile  README.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY.md  THIRD_PARTY_LICENSES  TIMELINE_RENDERING_ISSUE.md  TIMELINE_SELECTION_BUG_FIX.md  TIMELINE_UI_SUMMARY.md  TIMELINE_UX_ANALYSIS.md  TIMELINE_UX_FIXES_SUMMARY.md  TODO.md  VERIFICATION_SUMMARY.md  benchmark-req35.sh  benchmark-results.txt  coverage_summary.md  mcp.json.example  otel-traces.json  package.json  playwright-log.txt  prompt-trace-report-generic-spans.md  pyproject.toml  req35-baseline-plan.md  rf-trace-report-optimization-notes.md  rf-trace-report-optimization-notes2.md  robotframework-trace-report-cross-service-fix.md  trace-report-integration-tests-kind-robot.md  trace-report-k8s-architecture-decisions.md  (+3 more)
.github/workflows/: deploy-demo.yml  integration-test.yml  lint.yml  publish-oci.yml  publish.yml  test.yml
.kiro/hooks/: browser-regression-tests.kiro.hook  build-mcp-image.kiro.hook  install-git-hooks.kiro.json  python-format-check.kiro.hook  unit-tests-with-coverage.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: README.md  contribution-guidelines.md  docker-testing-strategy.md  implementation-guide.md  mcp-trace-analyzer.md  pbt-status-fix.md  release-process.md  test-strategy.md  troubleshooting-guide.md
docs/: TESTING.md  architecture.md  docker-testing.md  kubernetes.md  metrics.md  oci-verification.md  rf-html-report-feature-analysis.md  rf-output-xml-format.md  signoz-integration.md  testing.md  troubleshooting.md  user-guide.md
docs/analysis/: TESTABILITY_IMPROVEMENTS.md  TIMELINE_UX_FIXES_SUMMARY.md
docs/demo/: generate_demo_gif.robot
scripts/hooks/: pre-commit
src/rf_trace_viewer/: __init__.py  cli.py  config.py  error_codes.py  exceptions.py  generator.py  health.py  logging_config.py  metrics.py  (+8 more)
test-reports/: diverse-suite-preview.html  pabot-preview.html
tests/: conftest.py
(+301 files in other folders)
